--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,35 @@
     </plugins>
 </build>
 
+<build>
+    <plugins>
+        <!-- Other plugins might be listed here -->
+
+        <!-- JaCoCo Maven Plugin -->
+        <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.7</version>
+            <executions>
+                <execution>
+                    <id>prepare-agent</id>
+                    <goals>
+                        <goal>prepare-agent</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>report</id>
+                    <phase>prepare-package</phase>
+                    <goals>
+                        <goal>report</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+    </plugins>
+</build>
+
+  
   <properties>
   <sonar.organization>kareemmasri</sonar.organization>
   <sonar.host.url>https://sonarcloud.io</sonar.host.url>
