--- a/pom.xml
+++ b/pom.xml
@@ -61,33 +61,20 @@
 
   </dependencies>
 
-  <build>
+ <build>
     <plugins>
-        <!-- Other plugins might be listed here -->
-
-        <!-- JaCoCo Maven Plugin -->
         <plugin>
-            <groupId>org.jacoco</groupId>
-            <artifactId>jacoco-maven-plugin</artifactId>
-            <version>0.8.7</version>
-            <executions>
-                <execution>
-                    <id>prepare-agent</id>
-                    <goals>
-                        <goal>prepare-agent</goal>
-                    </goals>
-                </execution>
-                <execution>
-                    <id>report</id>
-                    <phase>prepare-package</phase>
-                    <goals>
-                        <goal>report</goal>
-                    </goals>
-                </execution>
-            </executions>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.1</version>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
         </plugin>
     </plugins>
 </build>
+
 
   <properties>
   <sonar.organization>kareemmasri</sonar.organization>
