--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
     <version>7.15.0</version>
 </dependency>
 
+    <dependency>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.11</version>
+        </dependency>
+
   </dependencies>
 
  <build>
