--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,10 @@
         </plugins>
     </build>
 
+  <properties>
+    <sonar.analysis.mode>issues</sonar.analysis.mode>
+</properties>
+
 
   <properties>
   <sonar.organization>kareemmasri</sonar.organization>
